--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <main>
         <section class="topo">
             <div class="nome-cargo">
+                
             <h1 class="nome">Fabio Castilho</h1>
             <h3 class="cargo">< designer & desenvolvedor front-end /></h3>
             <p>Olá, sou um estudante de Análise e Desenvolvimento de Sistemas. Estou em busca de uma oportunidade na área,
@@ -35,14 +36,14 @@
             <div class="card">
                 <img class="fundoimg" src="/img/Rectangle 7.png" alt="Imagem dos Projetos">
                 <p class="texto-card">
-                    Descrição base do projeto
+                    Desenvolvimento de uma aplicação que transforma links e textos em codigos QR.
                 </p>
                 <button class="tag">HTML</button>
                 <button class="tag">CSS</button>
                 <button class="tag">JS</button>
             </div>
             <div class="card">
-                <img class="fundoimg" src="/img/Rectangle 7.png" alt="Imagem dos Projetos">
+                <img class="fundoimg" src="/img/loading.png" alt="Imagem dos Projetos">
                 <p class="texto-card">
                     Descrição base do projeto
                 </p>
