--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Portfolio Fabio Castilho</title>
     <script src="/js/scripts.js"></script>
     <link rel="stylesheet" href="/css/styles.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
     <main>
@@ -29,11 +30,18 @@
             
         </section>
 
-        <section class="Habilidades">
-            <h1>Habilidades</h1>
-            <p>Adobe Photoshop</p>
-            <p>Adobe Ilustrator</p>
-            <p>Figma</p>
+        <section class="habilidades-ferrametas">
+            <div class="habi"><h1>Habilidades</h1>
+                <p>HTML</p>
+                <p>CSS</p>
+                <p>JavaScript</p>
+            </div>
+            
+            <div class="ferra"><h1>Ferramentas</h1>
+                <p>Adobe Photoshop</p>
+                <p>Adobe Ilustrator</p>
+                <p>Figma</p>
+            </div>
         </section>
 
 
@@ -59,6 +67,13 @@
                 <button class="tag">HTML</button>
                 <button class="tag">CSS</button>
                 <button class="tag">JS</button>
+            </div>
+            <div class="card">
+                <img class="fundoimg" src="/img/loading.png" alt="Imagem dos Projetos">
+                <p class="texto-card">
+                    Descrição base do projeto
+                </p>
+                <button class="tag"></button>
             </div>
             <div class="card">
                 <img class="fundoimg" src="/img/loading.png" alt="Imagem dos Projetos">
