--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <body>
     <main>
         <section class="topo">
+            <img  id="grafismo01" src="/img/grafi01.png" alt="grafismo">
+            <img id="grafismo02" src="/img/grafi02.png" alt="grafismo">
             <div class="nome-cargo">  
             <h1 class="nome">Fabio Castilho</h1>
             <h3 class="cargo">< designer & desenvolvedor front-end /></h3>
