--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Portfolio Fabio Castilho</title>
     <script src="/js/scripts.js"></script>
     <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
@@ -23,9 +24,9 @@
         </div>
             <div class="imagem-botoes">
                 <img class="fotop" src="/img/foto per.png" alt="Foto Perfil">
-                <a href="https://github.com/FabioCastilho" target="_blank"><button class="git">Github</button></a>
-                <a href="https://www.linkedin.com/in/fabiofcastilho/" target="_blank"><button class="linkedin">Linkedin</button></a>
-                <a href="https://www.behance.net/fabiocastilho" target="_blank"><button class="Behance">Behance</button></a>
+                <a href="https://github.com/FabioCastilho" target="_blank"><button class="git"><i class="fa-brands fa-github"></i> Github</button></a>
+                <a href="https://www.linkedin.com/in/fabiofcastilho/" target="_blank"><button class="linkedin"><i class="fa-brands fa-linkedin"></i> Linkedin</button></a>
+                <a href="https://www.behance.net/fabiocastilho" target="_blank"><button class="Behance"><i class="fa-brands fa-square-behance"></i> Behance</button></a>
             </div>
             
             
