clean css and html

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
         <section class="habilidades">
             <h1 class="habilidades_centro">Habilidades</h1>
+            <div class="line-dec"></div>
             <div class="habilidades_ferramentas">
                 <div class="habi">
                     <h1 class="titulo_sk">Front-End</h1>
@@ -57,6 +58,7 @@
         <section class="projetos">
             <div class="titulos">
                 <h1>Projetos</h1>
+                <div class="line-dec"></div>
             </div>
             <div class="grupo-cards">
             <div class="card">
@@ -108,6 +110,14 @@
             
         </div>
         </section>
+
+        <section class="contato">
+            <div class="titulos">
+                <h1>Contato</h1>
+                <div class="line-dec"></div>
+            </div>
+        </section>
+
     </main>
 </body>
 </html>
