--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="PT_br">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Fabio Castilho</title>
     <script src="/js/scripts.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.css" integrity="sha512-HXXR0l2yMwHDrDyxJbrMD9eLvPe3z3qL3PPeozNTsiHJEENxx8DH2CxmV05iwG0dwoz5n4gQZQyYLUNt1Wdgfg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -30,9 +31,9 @@
                 <img src="/img/foto per.png" alt="">
             </div>
             <div class="social_btn">  
-                <a href="https://github.com/FabioCastilho" target="_blank"><button class="git"><i class="fa-brands fa-github fa-2xl"></i></button></a>
-                <a href="https://www.linkedin.com/in/fabiofcastilho/" target="_blank"><button class="linkedin"><i class="fa-brands fa-linkedin fa-2xl"></i></button></a>
-                <a href="https://www.behance.net/fabiocastilho" target="_blank"><button class="Behance"><i class="fa-brands fa-square-behance fa-2xl"></i></button></a>
+                <a href="https://github.com/FabioCastilho" target="_blank" title="github"><button class="git"><i class="fa-brands fa-github fa-2xl"></i></button></a>
+                <a href="https://www.linkedin.com/in/fabiofcastilho/" target="_blank" title="linkedin"><button class="linkedin"><i class="fa-brands fa-linkedin fa-2xl"></i></button></a>
+                <a href="https://www.behance.net/fabiocastilho" target="_blank" title="Behance"><button class="Behance"><i class="fa-brands fa-square-behance fa-2xl"></i></button></a>
             </div>
             <div class="cv"><button><i class="fa-solid fa-cloud-arrow-down"></i> Baixar CV</button></div>
         </div>
@@ -67,8 +68,16 @@
                 <h1>Projetos</h1>
                 <div class="line-dec"></div>
             </div>
+            <!-- Filtro dos Projetos-->
+            <div class="btn_projetos">
+                <button class="filter-btn" data-target="all">Todos Projetos</button>
+                <button class="filter-btn" data-target="front"><i class="ri-code-s-slash-line"></i> Front End</button>
+                <button class="filter-btn" data-target="design"><i class="ri-pen-nib-line"></i> Design</button>
+            </div>
+
+            <!-- Cards dos Projetos-->
             <div class="grupo-cards">
-            <div class="card">
+            <div class="card " id="front">
                 <a href="https://gerador-qr-psi.vercel.app/" target="_blank"><img class="fundoimg" src="/img/Rectangle 7.png" alt="Imagem dos Projetos"></a>
                 <p class="texto-card">
                     Desenvolvimento de uma aplicação que transforma links e textos em codigos QR.
@@ -77,7 +86,7 @@
                 <button class="tag">CSS</button>
                 <button class="tag">JS</button>
             </div>
-            <div class="card">
+            <div class="card" id="front">
                 <a href="https://found-pets-test-nlnqbzri7-fabiocastilho.vercel.app/" target="_blank"><img class="fundoimg" src="/img/foundpets.png" alt="Imagem dos Projetos"></a>
                 <p class="texto-card">
                     Projeto academico, desenvolvimento de um web app para localizar pets perdidos.
@@ -86,7 +95,7 @@
                 <button class="tag">CSS</button>
                 <button class="tag">JS</button>
             </div>
-            <div class="card">
+            <div class="card" id="design">
                 <img class="fundoimg" src="/img/loading.png" alt="Imagem dos Projetos">
                 <p class="texto-card">
                     Descrição base do projeto
@@ -121,6 +130,17 @@
             <div class="titulos">
                 <h1>Contato</h1>
                 <div class="line-dec"></div>
+                <div class="formulario">
+                    <form action="mailto:fabioferreirafc@gmail.com" method="post" enctype="text/plain">
+                        Nome:<br>
+                        <input type="text" name="nome"><br>
+                         E-mail:<br>
+                        <input type="text" name="email"><br>
+                     Mensagem:<br>
+                      <textarea name="mensagem" rows="5" cols="30"></textarea><br><br>
+                      <input type="submit" value="Enviar">
+                    </form>
+                </div>
             </div>
         </section>
 
