--- a/index.html
+++ b/index.html
@@ -79,21 +79,36 @@
             <div class="grupo-cards">
             <div class="card " id="front">
                 <a href="https://gerador-qr-psi.vercel.app/" target="_blank"><img class="fundoimg" src="/img/Rectangle 7.png" alt="Imagem dos Projetos"></a>
+                <h2>Gerador de QR</h2>
                 <p class="texto-card">
                     Desenvolvimento de uma aplicação que transforma links e textos em codigos QR.
                 </p>
-                <button class="tag">HTML</button>
-                <button class="tag">CSS</button>
-                <button class="tag">JS</button>
+                <div class="lang">
+                    <button class="tag">HTML</button>
+                    <button class="tag">CSS</button>
+                    <button class="tag">JS</button>
+                </div>
+                <a href="#" class="read-more">
+                    Leia mais
+                    <i class="ri-arrow-right-line"></i>
+                  </a>
+
             </div>
             <div class="card" id="front">
                 <a href="https://found-pets-test-nlnqbzri7-fabiocastilho.vercel.app/" target="_blank"><img class="fundoimg" src="/img/foundpets.png" alt="Imagem dos Projetos"></a>
+                <h2>Found Pets</h2>
                 <p class="texto-card">
                     Projeto academico, desenvolvimento de um web app para localizar pets perdidos.
                 </p>
-                <button class="tag">HTML</button>
-                <button class="tag">CSS</button>
-                <button class="tag">JS</button>
+                <div class="lang">
+                    <button class="tag">HTML</button>
+                    <button class="tag">CSS</button>
+                    <button class="tag">JS</button>
+                </div>
+                <a href="#" class="read-more">
+                    Leia mais
+                    <i class="ri-arrow-right-line"></i>
+                  </a>
             </div>
             <div class="card" id="design">
                 <img class="fundoimg" src="/img/loading.png" alt="Imagem dos Projetos">
