--- a/index.html
+++ b/index.html
@@ -76,7 +76,31 @@
             </div>
 
             <!-- Cards dos Projetos-->
+
             <div class="grupo-cards">
+
+<!------------------------------------------------------------------------------------------>
+
+<div class="card" id="design">
+    <img class="fundoimg" src="/img/loading2.png" alt="Imagem dos Projetos">
+    <p class="texto-card">
+        <h2>Nome do Projeto</h2>
+        Descrição base do projeto
+    </p>
+        <div class="lang">
+             <button class="tag">HTML</button>
+             <button class="tag">CSS</button>
+             <button class="tag">JS</button>
+        </div>
+</div>
+
+
+<!------------------------------------------------------------------------------------------> 
+
+
+
+
+
             <div class="card " id="front">
                 <a href="https://gerador-qr-psi.vercel.app/" target="_blank"><img class="fundoimg" src="/img/Rectangle 7.png" alt="Imagem dos Projetos"></a>
                 <h2>Gerador de QR</h2>
@@ -110,13 +134,8 @@
                     <i class="ri-arrow-right-line"></i>
                   </a>
             </div>
-            <div class="card" id="design">
-                <img class="fundoimg" src="/img/loading.png" alt="Imagem dos Projetos">
-                <p class="texto-card">
-                    Descrição base do projeto
-                </p>
-                <button class="tag"></button>
-            </div>
+
+           
             <div class="card">
                 <img class="fundoimg" src="/img/loading.png" alt="Imagem dos Projetos">
                 <p class="texto-card">
