--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <a href="https://www.linkedin.com/in/fabiofcastilho/" target="_blank" title="linkedin"><button class="linkedin"><i class="fa-brands fa-linkedin fa-2xl"></i></button></a>
                 <a href="https://www.behance.net/fabiocastilho" target="_blank" title="Behance"><button class="Behance"><i class="fa-brands fa-square-behance fa-2xl"></i></button></a>
             </div>
-            <div class="cv"><button><i class="fa-solid fa-cloud-arrow-down"></i> Baixar CV</button></div>
+            <div class="cv"><button><i class="fa-solid fa-cloud-arrow-down"></i> <a href="https://raw.githubusercontent.com/FabioCastilho/FabioCastilho/main/CV%20Fabio%20Castilho%202023.pdf">Baixar CV</a></button></div>
         </div>
         
             
